style: add configuration path file

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -15,7 +15,45 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load the configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../config/config.yml', 'r') as file:\n",
+    "    config = yaml.safe_load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data_path = config['data']['raw']\n",
+    "cleaned_data_path = config['data']['cleaned']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(raw_data_path)\n",
+    "print(cleaned_data_path)"
    ]
   },
   {
@@ -31,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/raw/accident_region.csv')"
+    "df = pd.read_csv(raw_data_path)"
    ]
   },
   {
@@ -281,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"../data/cleaned/accident_region_cleaned.csv\", index=False)"
+    "df.to_csv(cleaned_data_path, index=False)"
    ]
   }
  ],
